fixed side scroll bug on iphones

--- a/web/app/themes/Foody/resources/sass/pages/recipe/_recipe.scss
+++ b/web/app/themes/Foody/resources/sass/pages/recipe/_recipe.scss
@@ -1486,6 +1486,12 @@ $content-width: 95%;
 
           .amount-container {
 
+            .foody-select{
+              select{
+                left: unset;
+              }
+            }
+
             label {
 
             }
@@ -2120,7 +2126,11 @@ $content-width: 95%;
           }
 
           .amount-container {
-
+            .foody-select{
+              select{
+                left: unset;
+              }
+            }
             label {
 
             }
@@ -2512,7 +2522,11 @@ $content-width: 95%;
           }
 
           .amount-container {
-
+            .foody-select{
+              select{
+                left: unset;
+              }
+            }
             label {
 
             }
@@ -2991,7 +3005,11 @@ $content-width: 95%;
           }
 
           .amount-container {
-
+            .foody-select{
+              select{
+                left: unset;
+              }
+            }
             label {
 
             }
